[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/UAV-OSD-Sans-Mono.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Indicator.gd" type="Script" id=2]
[ext_resource path="res://Audio/relay_off.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/relay_on.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 12
extra_spacing_top = 2
extra_spacing_bottom = 2
font_data = ExtResource( 1 )

[node name="Indicator" type="Node2D"]
script = ExtResource( 2 )

[node name="LightBox" type="ColorRect" parent="."]
margin_left = -43.0
margin_top = -43.0
margin_right = 43.0
margin_bottom = 43.0
color = Color( 0.211765, 0.00392157, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoLabel" type="Label" parent="."]
margin_left = -43.0
margin_top = -43.0
margin_right = 43.8772
margin_bottom = 45.2935
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "number
time
Remain"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="OffSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
